hphp/test/quick/SetM-str-promotion.php.expectf
string(1) "A"
string(1) "A"
Error: Setting a property on a non-object
string(0) ""
Error: Setting a property on a non-object
string(0) ""

Warning: Cannot access property on non-object in %s on line 11
string(1) " "

Warning: Cannot access property on non-object in %s on line 11
string(1) " "
